plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.6'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.select'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//mysql
	implementation 'mysql:mysql-connector-java'
	//mariadb
	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'

	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-test'
	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2'
	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//aws
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-tomcat'

	implementation group: "com.twilio.sdk", name:"twilio", version: "7.16.1"

	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'



}
jar {
	enabled = false
}
tasks.named('test') {
	useJUnitPlatform()
}
